Post options added. #7

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,6 +4,7 @@
   "choose": "Choose",
   "upload": "Upload",
   "cancel": "Cancel",
+  "report": "Report",
 
   "popular_games": "Popular Games",
   "popular_communities": "Popular Communities",
