--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -4,6 +4,7 @@
   "choose": "Seç",
   "upload": "Yükle",
   "cancel": "İptal",
+  "report": "Raporla",
 
   "popular_communities": "Popüler Komüniteler",
   "popular_games": "Popüler Oyunlar",
