Sort Options are now made with the new Menu component. #7

--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -20,9 +20,9 @@
   },
 
   "sort_options": {
-    "newest": "En Yeni",
-    "oldest": "En Eski",
-    "most_popular": "En Popüler"
+    "newest": "Yeni",
+    "oldest": "Eski",
+    "most_popular": "Popüler"
   },
 
   "time": {
