profile avatar generally completed and language selection added just needed add more style

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,5 +34,8 @@
   },
 
   "english": "English",
-  "turkish": "Turkish"
+  "turkish": "Turkish",
+  "language": "Language",
+  "settings": "Settings",
+  "sign_out": "Sign Out"
 }
