--- a/src/locales/tr.json
+++ b/src/locales/tr.json
@@ -34,5 +34,8 @@
   },
 
   "english": "İngilizce",
-  "turkish": "Türkçe"
+  "turkish": "Türkçe",
+  "language": "Dil",
+  "settings": "Ayarlar",
+  "sign_out": "Çıkış Yap"
 }
